public/css/mbc-style.css
/* ... */
.mbc-view-comment-wrap {
  margin-bottom: 10px;
}

.mbc-comment-segment-number {
  float: left;
  font-weight: bold;
  margin-top: 16px;
}

.mbc-history-balloon {
  background-color: #fff;
  padding: 0 12px 12px 12px; /* Add padding for consistency with comment in thread layout */
  position: relative;
}

.mbc-history-balloon-has-comment {
  max-height: 400px;
  overflow-y: auto;
}


/*
 ******
 ******
 Helpers
 ******
 ******
 */

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

/*
  Truncate text in label
 */
.mbc-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/*
  Set box model to border and account for border's width
 */
.mbc-comment-balloon-outer *,
.mbc-history-balloon-outer * {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.divider {
  background-color: #dadada;
  display:block; /* for use on default inline elements like span */
  height: 1px;
  margin: 0;
  overflow: hidden;
  width:100%;
}

/*
 ******
 Triangle in balloon
 ******
 */
.mbc-triangle {
  height: 0;
  width: 0;
}

/*
 Triangle top top in history balloon
 */
.mbc-triangle-top {
  border-right: 14px solid #fff;
  border-top: 14px solid transparent;
  float: right;
  margin-right: 20px;
  margin-top: -24px;
  -webkit-filter: drop-shadow(-3px -1px 2px rgba(0,0,0,0.1));
  filter: drop-shadow(-3px -1px 2px rgba(0,0,0,0.1));
}

/*
 Triangle top left in comment balloon
 */
.mbc-triangle-topleft {
  border-top: 10px solid #f7f7f7;
  border-left: 12px solid transparent;
  margin-left: -12px;
  -webkit-filter: drop-shadow(-1px 0px 0px rgba(0,0,0,.2));
  filter: drop-shadow(-1px 0px 0px rgba(0,0,0,.2));
}


/*
 ******
 Clearfix helpers
 ******
 */
.mbc-clearfix {
  *zoom: 1;
}
.mbc-clearfix:before,
.mbc-clearfix:after {
  display: table;
  content: "";
  line-height: 0;
}

.mbc-clearfix:after {
  clear: both;
}

/*
 ******
 Display and visibility helpers
 ******
 */
.hide {
  display: none!important;
}

.visible {
  display: block!important;
}

.vis-hidden {
  visibility: hidden;
}

.vis-visible {
  visibility: visible;
}

